CyberQueen CMD BOT

--- a/language/SI.json
+++ b/language/SI.json
@@ -179,7 +179,7 @@
             "TTS_ERROR": "```දෝෂය, ඔබේ වාක්‍යයේ කථන voice message කළ නොහැක!```",
             "SONG_DESC": "ඔබ ලියූ ගීතය උඩුගත කරයි.",
             "NEED_TEXT_SONG": "*කරුණාකර ගීතයක් කියන්න! ♦️*\n*උදාහරණයක්:* ```.song nalola```",
-            "NO_RESULT": "*කරුණාකර වලංගු link ඇතුලත් කරන්න. :(*\n(Please enter valid YouTube link.)",
+            "NO_RESULT": "*Not Found :(*\n(Please enter valid link.)",
             "DOWNLOADING_SONG": "*∂σωηℓσα∂ιηg уσυя ѕσηg = 🔍✨...*",
             "UPLOADING_SONG": "*υρℓσα∂ιηg уσυя ѕσηg = 🎶🎵...*",
             "VIDEO_DESC": "යූ ටියුබ් වෙතින් වීඩියෝ බාගත කරයි.",
@@ -189,7 +189,7 @@
             "YT_DESC": "එය යූ ටියුබ් තුළ සොයයි.",
             "NEED_WORDS": "```කරුණාකර වචන කිහිපයක් ලියන්න!```",
             "GETTING_VIDEOS": "```කරුණාකර රැඳී සිටින්න, වීඩියෝ serach කරමින් පවති 🔍...```",
-            "NOT_FOUND": "*කරුණාකර වලංගු link ඇතුලත් කරන්න. :(*\n(Please enter valid YouTube link.)",
+            "NOT_FOUND": "*Not Found :(*\n(Please enter valid link.)",
             "SEARCHING": "* 🔎 Searching...*",
             "WIKI_DESC": "Wikipedia සොයයි.",
             "IMG_DESC": "ගූගල් හි අදාළ පින්තූර සෙවීම.",
