--- a/language/SI.json
+++ b/language/SI.json
@@ -514,6 +514,14 @@
             "HİRE": "Can s/he Hirable?:",
             "URL": "Profile URL:",
             "UPDATE": "Last Update:"
-        }
+        },
+        "mediafire": {
+                   "M_DESC":"Mediafire ගොනු බාගත කරයි.",
+                   "M_DOWN":"```📥ඔබ සෙවූ mediafire ගොනුව බාගත කරමින් පවතී...```",
+                   "M_UP":"```📤ඔබ සෙවූ mediafire ගොනුව ගෙනඑමින් පවතී...```",
+                   "N_MLINK":"*⛔කරුණාකර වලංගු mediafire සබැදියක් ඇතුළත් කරන්න.⛔*",
+                   "E_MLINK":"*⛔ඔබ ඇතුළත් කළ සබැදියෙහි දෝශයක් පවතී⛔*"
+        
+     }
     }
 }
