CyberQueen CMD BOT

--- a/language/EN.json
+++ b/language/EN.json
@@ -434,6 +434,14 @@
             "HİRE": "Can s/he Hirable?:",
             "URL": "Profile URL:",
             "UPDATE": "Last Update:"
-        }
+        },
+        "mediafire": {
+                   "M_DESC":"Download mediafire files.",
+                   "M_DOWN":"```📥Downloading your Mediafire file...```",
+                   "M_UP":"```📤Uploading your Mediafire file...```",
+                   "N_MLINK":"*⛔Please give a  mediafire link⛔*",
+                   "E_MLINK":"*⛔There is an error in the link⛔*"
+        
+     }
     }
 }
