--- a/language/SI.json
+++ b/language/SI.json
@@ -517,8 +517,8 @@
         },
         "mediafire": {
                    "M_DESC":"Mediafire ගොනු බාගත කරයි.",
-                   "M_DOWN":"```📥ඔබ සෙවූ mediafire ගොනුව බාගත කරමින් පවතී...```",
-                   "M_UP":"```📤ඔබ සෙවූ mediafire ගොනුව ගෙනඑමින් පවතී...```",
+                   "M_DOWN":"```📥ඔබ සෙවූ mediafire ගොනුව Download කරමින් පවතී...```",
+                   "M_UP":"```📤ඔබ සෙවූ mediafire ගොනුව Upload පවතී...```",
                    "N_MLINK":"*⛔කරුණාකර වලංගු mediafire සබැදියක් ඇතුළත් කරන්න.⛔*",
                    "E_MLINK":"*⛔ඔබ ඇතුළත් කළ සබැදියෙහි දෝශයක් පවතී⛔*"
         
